<resources>
    <string name="app_name">Android2FinalProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Vince\'s Vintage Finds</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    // Menu

    <string name="menu_home">Home</string>
    <string name="menu_whatsNew">New Products</string>
    <string name="menu_deals">Deals</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_aboutUs">About Us</string>
    <string name="menu_discount">In Store Bonus</string>

    // Home

    <string name="home_title">Phone</string>
    <string name="home_intro">Welcome to Vince\'s Vintage Finds. We are so glad you\'ve discovered our app. \n \n
        Everyday we are adding new Products which you can find featured in our store. Head over to our Deals Section to
        find out about new promotions and sales coming up. We cannot wait to see you, and we hope we can satisfy all your
        vintage needs.</string>

    // Contact

    <string name="phoneButton">Phone</string>
    <string name="emailButton">Email</string>
    <string name="websiteButton">Website</string>
    <string name="loactionButton">Location</string>
    <string name="instagramButton">Instagram</string>
    <string name="shareButton">Share Website</string>
    <string name="oneMoreButton">add2</string>

    // About Us

    <string name="question1">What is our mission?</string>
    <string name="answer1">Here at <i><b>Vince\'s Vintage Finds</b></i>, we specialize in bringing the best old school clothing in the top condition to each of our loyal customers. Everyday we are out searching everywhere we can to find new pieces and are adding new products all the time.</string>
    <string name="question2">What do we carry?</string>
    <string name="answer2">We have tons of clothing, jewelery and accessories from the early 1920\'s to the late 1990\'s. We even sometimes get surprise furniture or decor available for sale as well.</string>
    <string name="question3">Who is Vince?</string>
    <string name="answer3">When Sam(owner of Vince\'s) was younger, she volunteered at a retirement home doing social activities with the residents. This is where Same met Vince. At the time, Vince was a 93 year old man who had spent his life working in a hobby shop. One thing that made Vince stand out was his fashion. He always had every piece of his outfit very thought out, and everything, even down to his socks matched perfect. He wore a lot of clothing he had from when he was younger. Much of his clothing was from around the 1940s. Since his clothes were so old, they weren\'t in the best condition. Sam decided to buy Vince a new outfit, and so she was off to search. This is when Sam first fell in love with vintage styles.</string>
    <string name="question4">How do we find what we sell?</string>
    <string name="answer4">Everyday we have employees out looking for new finds! We search yard sales, online, community sale pages and more. Not only to we actively search, we also are always looking to buy items off our customers. Have something you no longer wear and want to change it for something new? Bring it in and we will work with you on an offer so we end up with a new find and you end up with a new look.</string>
    <string name="question5">What are our hours?</string>
    <string name="answer5">We are open Monday through Saturday from 9am-8pm, and Sundays 11am-4pm</string>
    <string name="question6">What are we doing to keep up with Covid?</string>
    <string name="answer6">Here at Vince\'s we take all Covid regulations set by our government seriously. We ask that while you are in our store, you please where a mask and keep up with social distancing protocols. We also have sanitizer available throughout the store. As a precaution though, for the time being, our dressing rooms will be closed.</string>

    // Discount

    <string name="discountTitle">In Our Store Shopping?</string>
    <string name="discountContent">Once at Checkout, take your chance at receiving a discount or other bonus by pressing \'Lets Go\'</string>
    <string name="discountButton">Let\'s Go</string>

    // Credits

    <string name="creditsTitle">Credits</string>
    <string name="creditContent">CREDITS GO HERE</string>
    <string name="content1">About Us Image by <a href="https://pixabay.com/users/counselling-440107/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=483833"/>Ulrike Mai from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=483833"/>Pixabay</string>
    <string name="content2">Deals Images by Canva/Najiblitz</string>
    <string name="content3">Programmed by Amanda Gayer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>


    <string name="oops">1990\'s Toronto Blue Jays Jersey</string>

</resources>