<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_whatsNew"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_whatsNew" />
        <item
            android:id="@+id/nav_deals"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_deals" />
        <item
            android:id="@+id/nav_aboutUs"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_aboutUs" />
        <item
            android:id="@+id/nav_contactUs"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_settings" />

    </group>
</menu>