<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_deals"
        android:name="com.example.android2finalproject.DealsFragment"
        android:label="@string/menu_deals"
        tools:layout="@layout/fragment_deals" />
    <fragment
        android:id="@+id/nav_contactUs"
        android:name="com.example.android2finalproject.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />
    <fragment
        android:id="@+id/nav_aboutUs"
        android:name="com.example.android2finalproject.AboutUsFragment"
        android:label="@string/menu_aboutUs"
        tools:layout="@layout/fragment_about_us" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.android2finalproject.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_whatsNew"
        android:name="com.example.android2finalproject.WhatsNewFragment"
        android:label="@string/menu_whatsNew"
        tools:layout="@layout/fragment_whats_new" />
    <fragment
        android:id="@+id/nav_credits"
        android:name="com.example.android2finalproject.CreditsFragment"
        android:label="@string/creditsTitle"
        tools:layout="@layout/fragment_credits" />
    <fragment
        android:id="@+id/nav_discount"
        android:name="com.example.android2finalproject.DiscountFragment"
        android:label="fragment_discount"
        tools:layout="@layout/fragment_discount" />
    <fragment
        android:id="@+id/nav_bonus"
        android:name="com.example.android2finalproject.BonusFragment"
        android:label="In Store Bonus"
        tools:layout="@layout/fragment_bonus" />

</navigation>